src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>c2g__CODAEntityUseCode__c</fullName>
        <label>Entity / Use Code</label>
        <picklist>
            <picklistValues>
                <fullName>A - Federal government - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - State government - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Tribe / Status Indian / Indian Band - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Foreign diplomat - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E - Charitable or benevolent org - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - Religious or educational org - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - Resale - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H - Commercial agricultural production - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I - Industrial production / manufacturer - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J - Direct pay permit - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K - Direct mail - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L - Other - both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N - Local government - United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P - Commercial aquaculture - Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q - Commercial Fishery - Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R - Non-resident - Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExemptionCertificate__c</fullName>
        <label>Exemption Certificate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAFederallyReportable1099__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Federally Reportable 1099</description>
        <label>Federally Reportable 1099</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAFinanceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Federal Income Tax Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Fishing Boat Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Medical and Healthcare Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Nonemployee Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Crop Insurance Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Unused 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Unused 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Excess Golden Parachute Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reportable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIntercompanyAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intercompany Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInvoiceEmail__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__CODAMergeId__c</fullName>
        <label>Merge Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAOutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPaymentMethod__c</fullName>
        <description>The payment method</description>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAReportingCode__c</fullName>
        <description>A unique code used for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt for Qualifying Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAShippingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(ShippingStreet) &amp;&amp;
ISBLANK(ShippingCity) &amp;&amp;
ISBLANK(ShippingState) &amp;&amp;
ISBLANK(ShippingPostalCode) &amp;&amp;
ISBLANK(ShippingCountry)) &amp;&amp;
c2g__CODAValidatedShippingStreet__c == ShippingStreet &amp;&amp;
c2g__CODAValidatedShippingCity__c == ShippingCity &amp;&amp;
c2g__CODAValidatedShippingState__c == ShippingState &amp;&amp;
c2g__CODAValidatedShippingPostCode__c == ShippingPostalCode &amp;&amp;
c2g__CODAValidatedShippingCountry__c == ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCalculationMethod__c</fullName>
        <description>The method of calculating tax in the UK.</description>
        <label>Tax Calculation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Gross</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net of Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxpayerIdentificationNumber__c</fullName>
        <description>Taxpayer Identification Number</description>
        <label>Taxpayer Identification Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATStatus__c</fullName>
        <label>Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EC Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC Non-registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCity__c</fullName>
        <label>ValidatedBillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCountry__c</fullName>
        <label>ValidatedBillingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingPostCode__c</fullName>
        <label>ValidatedBillingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingState__c</fullName>
        <label>ValidatedBillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingStreet__c</fullName>
        <label>ValidatedBillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCity__c</fullName>
        <label>ValidatedShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCountry__c</fullName>
        <label>ValidatedShippingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingPostCode__c</fullName>
        <label>ValidatedShippingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingState__c</fullName>
        <label>ValidatedShippingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingStreet__c</fullName>
        <label>ValidatedShippingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>14 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days from date of invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days from end of month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days from date of invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days from end of month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days from date of invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be analysed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Agency_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>County_State__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Main_Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Client_Type__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Msl_Salesman__c</columns>
        <columns>Msl_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agency__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>3: Agency Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>County_State__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Main_Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Client_Type__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Agency__c</columns>
        <columns>Msl_Salesman__c</columns>
        <columns>Msl_Id__c</columns>
        <columns>School_ID__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Department__c</columns>
        <columns>Faculty__c</columns>
        <filterScope>Everything</filterScope>
        <label>2: All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Direct_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>County_State__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Main_Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Client_Type__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Msl_Salesman__c</columns>
        <columns>Msl_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agency__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>4: Direct Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>County_State__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Main_Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Client_Type__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Msl_Salesman__c</columns>
        <columns>Msl_Id__c</columns>
        <filterScope>Mine</filterScope>
        <label>1: My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>County_State__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Main_Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Client_Type__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Agency__c</columns>
        <columns>Msl_Salesman__c</columns>
        <columns>Msl_Id__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>5: New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Account_Creation</fullName>
        <active>true</active>
        <label>Account Creation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Edit</fullName>
        <active>true</active>
        <label>Account Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Edit_Locked</fullName>
        <active>true</active>
        <label>Account Edit Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2C_Account</fullName>
        <active>true</active>
        <description>B2C accounts coming from integration</description>
        <label>B2C Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>B2C_Ensure_Billing_Email_Is_Set</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;B2C Account&apos; &amp;&amp; ISBLANK( Billing_Email_Address__c)</errorConditionFormula>
        <errorDisplayField>Billing_Email_Address__c</errorDisplayField>
        <errorMessage>The Billing Email Address is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>B2C_Ensure_Billing_Last_Name_Is_Set</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;B2C Account&apos; &amp;&amp;   ISBLANK(Billing_Last_Name__c)</errorConditionFormula>
        <errorDisplayField>Billing_Last_Name__c</errorDisplayField>
        <errorMessage>The Billing Last Name is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>B2C_Ensure_Shipping_Email_Is_Set</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;B2C Account&apos; &amp;&amp; ISBLANK(Shipping_Email_Address__c) &amp;&amp; (
(NOT(ISBLANK(ShippingStreet)) &amp;&amp; ShippingStreet &lt;&gt; BillingStreet)
|| (NOT(ISBLANK(ShippingCity)) &amp;&amp; ShippingCity &lt;&gt; BillingCity)
|| (NOT(ISBLANK(ShippingCountry)) &amp;&amp; ShippingCountry &lt;&gt; BillingCountry)
|| (NOT(ISBLANK(ShippingPostalCode)) &amp;&amp; ShippingPostalCode &lt;&gt; BillingPostalCode)
|| (NOT(ISBLANK(Shipping_Last_Name__c)) &amp;&amp; Shipping_Last_Name__c &lt;&gt; Billing_Last_Name__c)
|| (NOT(ISBLANK(Shipping_First_Name__c)) &amp;&amp; Shipping_First_Name__c &lt;&gt; Billing_First_Name__c)
|| (NOT(ISBLANK(Shipping_Phone__c)) &amp;&amp; Shipping_Phone__c &lt;&gt; Billing_Phone__c)
)</errorConditionFormula>
        <errorDisplayField>Shipping_Email_Address__c</errorDisplayField>
        <errorMessage>A Shipping Email Address must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>B2C_Ensure_Shipping_Last_Name_Is_Set</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;B2C Account&apos; &amp;&amp; ISBLANK(Shipping_Last_Name__c) &amp;&amp; (
(NOT(ISBLANK(ShippingStreet)) &amp;&amp; ShippingStreet &lt;&gt; BillingStreet)
|| (NOT(ISBLANK(ShippingCity)) &amp;&amp; ShippingCity &lt;&gt; BillingCity)
|| (NOT(ISBLANK(ShippingCountry)) &amp;&amp; ShippingCountry &lt;&gt; BillingCountry)
|| (NOT(ISBLANK(ShippingPostalCode)) &amp;&amp; ShippingPostalCode &lt;&gt; BillingPostalCode)
|| (NOT(ISBLANK(Shipping_First_Name__c)) &amp;&amp; Shipping_First_Name__c &lt;&gt; Billing_First_Name__c)
|| (NOT(ISBLANK(Shipping_Phone__c)) &amp;&amp; Shipping_Phone__c &lt;&gt; Billing_Phone__c)
|| (NOT(ISBLANK(Shipping_Email_Address__c)) &amp;&amp; Shipping_Email_Address__c &lt;&gt; Billing_Email_Address__c)

)</errorConditionFormula>
        <errorDisplayField>Shipping_Last_Name__c</errorDisplayField>
        <errorMessage>A Shipping Last Name must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Required_for_US_UK_Aus_CA</fullName>
        <active>false</active>
        <description>State should be required if the country of the Account is in the UK, US,  Australia, Canada</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(County_State__c)),
OR(ISPICKVAL(Country__c, &quot;UNITED STATES&quot;),
ISPICKVAL(Country__c, &quot;UNITED KINGDOM&quot;),
ISPICKVAL(Country__c, &quot;AUSTRALIA&quot;),
ISPICKVAL(Country__c, &quot;CANADA&quot;)))</errorConditionFormula>
        <errorMessage>Please select County/State if the Country is Australia, Canada, US and UK.</errorMessage>
    </validationRules>
</CustomObject>